--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-oauth": "^0.0.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -50,6 +51,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-private-property-in-object": "^7.22.11"
+    "@babel/plugin-transform-private-property-in-object": "^7.22.11",
+    "json-loader": "^0.5.7"
   }
 }
