ajout back NESTJSdockercompose [BACK]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - ./back:/app
+      - ./backend:/app
     networks:
       - transcendence
     restart: unless-stopped
