--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 services:
   # FRONTEND
   front:
+    build:
+      context: ./frontend
     image: node:lts-alpine
     container_name: frontend
     working_dir: /app
