--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,24 +15,24 @@ services:
     command: sh -c "npm install && npm start"
     networks:
       - transcendence
-        #  depends_on:
-        #- backend
+    depends_on:
+      - backend
 
-  # BACKEND
-  #  backend:
-  # build:
-  #   context: ./backend
-  #  image: node:lts-alpine
-  # container_name: back
-  # working_dir: /app
-  # ports:
-  #   - "8080:8080"
-  # volumes:
-  #   - ./backend:/app
-  # networks:
-  #   - transcendence
-  #  restart: unless-stopped
-  # command: npm run start
+#BACKEND
+  backend:
+   build:
+     context: ./backend
+   image: node:lts-alpine
+   container_name: back
+   working_dir: /app
+   ports:
+     - "8080:8080"
+   volumes:
+     - ./backend:/app
+   networks:
+     - transcendence
+   restart: unless-stopped
+   command: sh -c "npm install && npm run start"
 
 networks:
   transcendence:
