--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,27 +2,27 @@ version: '3'
 services:
   # FRONTEND
   front:
-    build:
-      context: ./frontend
-    image: node:lts-alpine
-    container_name: frontend
-    working_dir: /app
-    volumes:
-      - ./frontend:/app
-    ports:
-      - "3000:3000"
-    restart: unless-stopped
-    command: sh -c "npm install && npm start"
-    networks:
-      - transcendence
-    depends_on:
-      - backend
+   build:
+     context: ./frontend
+   image: node:lts-alpine
+   container_name: frontend
+   working_dir: /app
+   volumes:
+     - ./frontend:/app
+   ports:
+     - "3000:3000"
+   restart: unless-stopped
+   command: sh -c "npm install && npm start"
+   networks:
+     - transcendence
+   depends_on:
+     - backend
 
 #BACKEND
   backend:
    build:
      context: ./backend
-   image: node:lts-alpine
+   image: python:3.8-alpine
    container_name: back
    working_dir: /app
    ports:
@@ -32,7 +32,9 @@ services:
    networks:
      - transcendence
    restart: unless-stopped
-   command: sh -c "npm install && npm run start"
+   command: sh -c "pip install -r requirements.txt && python manage.py runserver 0.0.0.0:8080 --noreload"
+
+#NGNINX
 
 networks:
   transcendence:
