--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,18 @@ services:
    restart: unless-stopped
    command: sh -c "pip install -r requirements.txt && python manage.py runserver 0.0.0.0:8080 --noreload"
 
-#NGNINX
+# NGINX
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - backend
+    networks:
+      - transcendence
 
 networks:
   transcendence:
