--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.9.3",
     "axios": "^1.5.1",
     "buffer": "^6.0.3",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-oauth": "^0.0.1",
