--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,37 +5,50 @@ events {
 }
 
 http {
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
 
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-
+    # Redirection de HTTP vers HTTPS
     server {
         listen 80;
-        server_name localhost;
+        server_name localhost 127.0.0.1;
 
         location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    # Configuration pour HTTPS
+    server {
+        listen 443 ssl;
+        server_name localhost 127.0.0.1;
+
+        ssl_certificate /etc/nginx/nginx.crt;
+        ssl_certificate_key /etc/nginx/nginx.key;
+
+        # Configurations SSL
+        ssl_protocols TLSv1.2 TLSv1.3;
+
+        # Configuration pour la sécurité des cookies
+        add_header Strict-Transport-Security "max-age=31536000; includeSubdomains" always;
+
+        location / {
+            proxy_pass http://front:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /api {
             proxy_pass http://backend:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
-
-        location /static/ {
-            alias /app/static/;
-        }
-
-        location /media/ {
-            alias /app/media/;
-        }
-
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-            root /usr/share/nginx/html;
+        
+        # Redirection automatique de localhost vers localhost:3000
+        location = / {
+            return 301 https://$host$request_uri;
         }
     }
 }
