--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,4 +7,5 @@ django-allauth==0.47.0
 djangorestframework-simplejwt==5.0.0
 django-oauth-toolkit==1.5.0
 python-dotenv==0.19.0
+pyotp==2.7.0
 django-sslserver
