--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,14 @@
     "antd": "^5.9.3",
     "axios": "^1.5.1",
     "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
     "js-cookie": "^3.0.5",
+    "otplib": "^12.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-oauth": "^0.0.1",
+    "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
@@ -50,6 +54,12 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.22.11",
-    "json-loader": "^0.5.7"
+    "css-loader": "^6.9.1",
+    "json-loader": "^0.5.7",
+    "postcss-loader": "^8.0.0",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.0.0",
+    "style-loader": "^3.3.4"
   }
 }
