--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,11 +9,17 @@ http {
     # Redirection de HTTP vers HTTPS
     server {
         listen 80;
-        server_name localhost 127.0.0.1;
+	server_name localhost 127.0.0.1;
+	#server_name ponggame.com;
 
         location / {
             return 301 https://$host$request_uri;
         }
+
+	#location ^~ /.well-known/acme-challenge/ {
+	#allow all;
+        #root /var/www/html;
+	#}
     }
 
     # Configuration pour HTTPS
@@ -21,8 +27,13 @@ http {
         listen 443 ssl;
         server_name localhost 127.0.0.1;
 
-        ssl_certificate /etc/nginx/nginx.crt;
-        ssl_certificate_key /etc/nginx/nginx.key;
+	ssl_certificate /etc/nginx/nginx.crt;
+	ssl_certificate_key /etc/nginx/nginx.key;
+
+	# Changer certification ??
+
+	#ssl_certificate /etc/letsencrypt/live/localhost/fullchain.pem;
+	#ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
 
         # Configurations SSL
         ssl_protocols TLSv1.2 TLSv1.3;
