--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.9.3",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
     "js-cookie": "^3.0.5",
     "otplib": "^12.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-oauth": "^0.0.1",
