--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,9 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.12",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "universal-cookie": "^7.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
