--- a/backend/.env
+++ b/backend/.env
@@ -6,6 +6,11 @@ POSTGRES_DB=django_db
 ## Ports
 BACK_PORT=8080
 FRONT_PORT=3000
+DATABASE_PORT=5432
+
+# SETTINGS SECRET KEY
+
+SECRET_KEY=django-insecure-_gpjt-re1vo^qvm%*t4zpx5f6jc(%u(^0l6-q9b4l!e!gi0*cu
 
 ## JWT TOKEN
 
